--- a/src/layouts/purchase/customer.css
+++ b/src/layouts/purchase/customer.css
@@ -9,8 +9,8 @@
     top: calc(50% - 1em);
 }
 .div234 {
-    width: 500px;
-    height: 300px;
+    width: 35%;
+    height: 293px;
     margin-top: 40px;
     margin-left: 600px;
     font-weight: bold;
